fixing blacklines overflowing on mobile

--- a/scss/sections/experiences.scss
+++ b/scss/sections/experiences.scss
@@ -141,6 +141,13 @@
                 width: 200px;
             }
 
+            .chrono-box {
+                
+                h5 {
+                    width: auto;
+                }
+            }
+
 
             p {
                 font-size: 15px;
