--- a/scss/sections/footer.scss
+++ b/scss/sections/footer.scss
@@ -8,10 +8,7 @@
 
 .footer-container {
     
-    //height: 100px;
-    // margin-top: 100px;
-    // background-color: $beige;
-    // box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    margin-bottom: 50px;
 
     .bio {
         font-weight: 700;
